--- a/src/app/rectangle/rectangle.component.css
+++ b/src/app/rectangle/rectangle.component.css
@@ -1,12 +1,6 @@
-#myRectangle{
- background-color: green;
- width: 200px;
- height: 100px;
-/* margin-top: 20px;*/
-}
 
-/* #mdnRectangle{
-    width: 500px;
-    height: 500px;
-    background-color: tan;
-} */
+ canvas{
+   width: 100%;
+   height: 100%;
+   background-color: #e6ffff;
+ }
